--- a/.harness/samplecicd.yaml
+++ b/.harness/samplecicd.yaml
@@ -33,3 +33,62 @@ pipeline:
                       type: KubernetesHosted
                       spec:
                           identifier: k8s-hosted-infra
+        - stage:
+              name: CD
+              identifier: CD
+              description: ""
+              type: Deployment
+              spec:
+                  serviceConfig:
+                      serviceRef: nginx
+                      serviceDefinition:
+                          spec:
+                              variables: []
+                              manifests:
+                                  - manifest:
+                                        identifier: manifest01
+                                        type: K8sManifest
+                                        spec:
+                                            store:
+                                                type: Github
+                                                spec:
+                                                    connectorRef: configgit
+                                                    gitFetchType: Branch
+                                                    paths:
+                                                        - app-deploy.yaml
+                                                    repoName: firstdrone
+                                                    branch: master
+                                            skipResourceVersioning: false
+                          type: Kubernetes
+                  infrastructure:
+                      environmentRef: sampleEnvironment
+                      infrastructureDefinition:
+                          type: KubernetesDirect
+                          spec:
+                              connectorRef: account.Harness_Kubernetes_Cluster
+                              namespace: harness-delegate-ng
+                              releaseName: release-<+INFRA_KEY>
+                      allowSimultaneousDeployments: false
+                  execution:
+                      steps:
+                          - step:
+                                name: Rollout Deployment
+                                identifier: rolloutDeployment
+                                type: K8sRollingDeploy
+                                timeout: 10m
+                                spec:
+                                    skipDryRun: false
+                      rollbackSteps:
+                          - step:
+                                name: Rollback Rollout Deployment
+                                identifier: rollbackRolloutDeployment
+                                type: K8sRollingRollback
+                                timeout: 10m
+                                spec: {}
+              tags: {}
+              failureStrategies:
+                  - onFailure:
+                        errors:
+                            - AllErrors
+                        action:
+                            type: StageRollback
