--- a/.harness/samplecicd.yaml
+++ b/.harness/samplecicd.yaml
@@ -46,7 +46,7 @@ pipeline:
                               variables: []
                               manifests:
                                   - manifest:
-                                        identifier: manifest02
+                                        identifier: manifest01
                                         type: K8sManifest
                                         spec:
                                             store:
@@ -56,7 +56,7 @@ pipeline:
                                                     gitFetchType: Branch
                                                     paths:
                                                         - " content/en/examples/application/nginx-app.yaml"
-                                                    repoName: website
+                                                    repoName: firstdrone
                                                     branch: main
                                             skipResourceVersioning: false
                           type: Kubernetes
